--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
    <div class="container main-container">
       <div class="container child-container">
          <div class="row location-text">
+            <div class="col-sm-12" id="site"></div>
             <div class="col-sm-12" id="date"></div>
          </div>
          <div class="row weather-text">
@@ -27,7 +28,7 @@
             </div>
          </div>
          <div class="row" id="weather-submit">
-            <input type="text" name="submit" id="location">
+            <input type="text" name="submit" id="location" placeholder="location">
             <button type="submit" name="submit" onclick="getWeather()">Get Weather</button>
          </div>
       </div>
